@@ -8,6 +8,7 @@ GLIB_REQUIRED=2.11.0
 LIBXML_REQUIRED=2.4.7
 CAIRO_REQUIRED=1.2.0
 PANGOFT2_REQUIRED=1.2.0
+PANGOCAIRO_REQUIRED=1.2.0
 
 AC_SUBST(GDK_PIXBUF_REQUIRED)
 AC_SUBST(GLIB_REQUIRED)
@@ -86,10 +87,12 @@ PKG_CHECK_MODULES(LIBRSVG, \
 	glib-2.0 >= $GLIB_REQUIRED \
 	libxml-2.0 >= $LIBXML_REQUIRED \
 	pangoft2 >= $PANGOFT2_REQUIRED \
+	pangocairo >= $PANGOCAIRO_REQUIRED \
 	cairo >= $CAIRO_REQUIRED \
 	cairo-png >= $CAIRO_REQUIRED \
 	fontconfig >= $FONTCONFIG_REQUIRED
 	freetype2)
+
 AC_SUBST(LIBRSVG_LIBS)
 AC_SUBST(LIBRSVG_CFLAGS)
 
